--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -46,7 +46,10 @@
                     </StackPanel>
 
                     <TextBox x:Name="RecipeServings" Text="{Binding Servings, Mode=TwoWay}" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="10" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
-                    <TextBox x:Name="RecipeUrl" Text="{Binding Url, Mode=TwoWay}" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox x:Name="RecipeUrl" Text="{Binding Url, Mode=TwoWay}" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="350" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                        <AppBarButton x:Name="getRecipeFromUrlButton" Tag="getRecipeFromUrlButton" Icon="Import" Label="Import" Click="getRecipeFromUrlButton_Click" Margin="0,24,0,0" />
+                    </StackPanel>
                 </StackPanel>
 
                 <StackPanel x:Name="RecipeDetailsPanelRight" Margin="20" RelativePanel.RightOf="RecipeDetailsPanelLeft" >
