--- a/RecipeBox/Pages/AppSettingsPage.xaml
+++ b/RecipeBox/Pages/AppSettingsPage.xaml
@@ -14,6 +14,7 @@
 
             <RelativePanel x:Name="SettingsRelativePanel" RelativePanel.Below="TitleTextBlock">
                 <TextBox x:Name="RecipeSaveLocation" Header="Recipe Save Location" IsEnabled="False" />
+                <AppBarButton x:Name="RecipeSaveLocationBrowseButton" Icon="Folder" Label="Browse" Click="RecipeSaveLocationBrowseButton_Click" RelativePanel.RightOf="RecipeSaveLocation" />
             </RelativePanel>
         </RelativePanel>
     </Grid>
