--- a/RecipeBox/Pages/MainPage.xaml
+++ b/RecipeBox/Pages/MainPage.xaml
@@ -27,16 +27,19 @@
 
         <ListView x:Name="RecipeListView" ItemClick="RecipeListView_ItemClick" IsItemClickEnabled="True" RelativePanel.Below="FilterByPanel">
             <ListView.ItemTemplate>
-                <DataTemplate x:Name="DoubleLineDataTemplate" x:DataType="local:Recipe">
+                <DataTemplate x:Name="RecipeMainPageDataTemplate" x:DataType="local:Recipe">
                     <StackPanel Orientation="Horizontal" Height="64" AutomationProperties.Name="{x:Bind Name}">
-                        <Ellipse Height="48" Width="48" VerticalAlignment="Center">
-                            <Ellipse.Fill>
-                                <ImageBrush ImageSource="Placeholder.png"/>
-                            </Ellipse.Fill>
-                        </Ellipse>
                         <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="12,0,0,0">
                             <TextBlock Text="{x:Bind Name}"  Style="{ThemeResource BaseTextBlockStyle}" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}" />
                             <TextBlock Text="{x:Bind Description}" Style="{ThemeResource BodyTextBlockStyle}" Foreground="{ThemeResource SystemControlPageTextBaseMediumBrush}"/>
+
+                            <StackPanel.ContextFlyout>
+                                <MenuFlyout>
+                                    <MenuFlyoutItem Text="Edit" Click="EditRecipeMenuFlyoutItem_Click" />
+                                    <MenuFlyoutSeparator />
+                                    <MenuFlyoutItem Text="Delete" Click="DeleteRecipeMenuFlyoutItem_Click" />
+                                </MenuFlyout>
+                            </StackPanel.ContextFlyout>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
