--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -24,7 +24,7 @@
 
                 <RelativePanel x:Name="RecipeDetailsPanel" RelativePanel.Below="NewRecipeCommandBar">
                     <StackPanel x:Name="RecipeDetailsPanelLeft" Margin="20" >
-                        <TextBox x:Name="RecipeName" Text="{Binding Name, Mode=TwoWay}" Header="Name" TabIndex="0" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+                        <TextBox x:Name="RecipeName" Text="{Binding Name, Mode=TwoWay}" Header="Name" TabIndex="0" Padding="0,0,0,16" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
 
                         <StackPanel x:Name="RecipeCategoriesPanel">
                             <TextBlock x:Name="RecipeCategoriesTitle" Text="Categories" Margin="0,24,0,0" VerticalAlignment="Center" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
@@ -48,13 +48,13 @@
 
                         <TextBox x:Name="RecipeServings" Text="{Binding Servings, Mode=TwoWay}" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="10" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
                         <StackPanel Orientation="Horizontal">
-                            <TextBox x:Name="RecipeUrl" Text="{Binding Url, Mode=TwoWay}" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="350" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                            <TextBox x:Name="RecipeUrl" Text="{Binding Url, Mode=TwoWay}" Header="Url" TabIndex="8" Padding="0,0,0,16" Margin="0,24,0,0" Width="350" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
                             <AppBarButton x:Name="getRecipeFromUrlButton" Tag="getRecipeFromUrlButton" Icon="Import" Label="Import" Click="getRecipeFromUrlButton_Click" Margin="0,24,0,0" />
                         </StackPanel>
                     </StackPanel>
 
                     <StackPanel x:Name="RecipeDetailsPanelRight" Margin="20" RelativePanel.RightOf="RecipeDetailsPanelLeft" >
-                        <TextBox x:Name="RecipeDescription" Text="{Binding Description, Mode=TwoWay}" Header="Description" TabIndex="1" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                        <TextBox x:Name="RecipeDescription" Text="{Binding Description, Mode=TwoWay}" Header="Description" TabIndex="1" Padding="0,0,0,16" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
 
                         <StackPanel x:Name="RecipeCuisinesPanel">
                             <TextBlock x:Name="RecipeCuisinesTitle" Text="Cuisines" Margin="0,24,0,0" VerticalAlignment="Center" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
@@ -94,9 +94,9 @@
                 <RelativePanel x:Name="RecipeIngredientsPanel" Margin="20" RelativePanel.Below="RecipeDetailsPanel">
                     <TextBlock x:Name="RecipeIngredientsTitleTextBlock" Text="Ingredients" VerticalAlignment="Center" Style="{ThemeResource BaseTextBlockStyle}" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
                     <RelativePanel x:Name="RecipeIngredientPanel" RelativePanel.Below="RecipeIngredientsTitleTextBlock">
-                        <TextBox x:Name="AddRecipeIngredientQuantityTextBox" Header="Quantity" MaxLength="10" TabIndex="10" Width="65" HorizontalAlignment="Left" InputScope="NumberFullWidth" ui:TextBoxExtensions.Regex="^(?:[1-9]\d*(?:\.\d+)?|0\.0*[1-9]\d*)$" ui:TextBoxExtensions.ValidationMode="Forced" />
-                        <ComboBox x:Name="AddRecipeIngredientUnitOfMeasurementComboBox" Header="Unit of Measurement" TabIndex="11" Margin="10,0,0,0" Width="135" HorizontalAlignment="Left" RelativePanel.RightOf="AddRecipeIngredientQuantityTextBox" />
-                        <TextBox x:Name="AddRecipeIngredientNameTextBox" Header="Name" TabIndex="12" Margin="10,0,0,0" Width="180" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" RelativePanel.RightOf="AddRecipeIngredientUnitOfMeasurementComboBox" />
+                        <TextBox x:Name="AddRecipeIngredientQuantityTextBox" Header="Quantity" MaxLength="10" TabIndex="10" Padding="0,0,0,16" Width="65" HorizontalAlignment="Left" InputScope="NumberFullWidth" ui:TextBoxExtensions.Regex="^(?:[1-9]\d*(?:\.\d+)?|0\.0*[1-9]\d*)$" ui:TextBoxExtensions.ValidationMode="Forced" />
+                        <ComboBox x:Name="AddRecipeIngredientUnitOfMeasurementComboBox" Header="Unit of Measurement" TabIndex="11" Padding="0,0,0,20" Margin="10,0,0,0" Width="135" HorizontalAlignment="Left" RelativePanel.RightOf="AddRecipeIngredientQuantityTextBox" />
+                        <TextBox x:Name="AddRecipeIngredientNameTextBox" Header="Name" TabIndex="12" Padding="0,0,0,16" Margin="10,0,0,0" Width="180" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" RelativePanel.RightOf="AddRecipeIngredientUnitOfMeasurementComboBox" />
                     </RelativePanel>
 
                     <StackPanel x:Name="RecipeIngredientsButtonPanel" Orientation="Horizontal" RelativePanel.Below="RecipeIngredientPanel" RelativePanel.AlignRightWithPanel="True">
@@ -120,7 +120,7 @@
                 </RelativePanel>
 
                 <RelativePanel x:Name="RecipeInstructionsPanel" Margin="20" RelativePanel.RightOf="RecipeIngredientsPanel" RelativePanel.Below="RecipeDetailsPanel" >
-                    <TextBox x:Name="AddRecipeInstructionTextBox" Header="Instructions" PlaceholderText="Enter an instructions here" TabIndex="13" Margin="0,19,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                    <TextBox x:Name="AddRecipeInstructionTextBox" Header="Instructions" PlaceholderText="Enter an instructions here" TabIndex="13" Padding="0,0,0,16" Margin="0,19,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
 
                     <StackPanel x:Name="RecipeInstructionsButtonPanel" Orientation="Horizontal" RelativePanel.Below="AddRecipeInstructionTextBox" RelativePanel.AlignRightWithPanel="True">
                         <AppBarButton x:Name="RecipeInstructionAddButton" Style="{StaticResource AppBarButtonRevealStyle}" Icon="Add" Label="Add instruction" Click="RecipeInstructionsAddButton_Click" />
@@ -139,7 +139,7 @@
                 </RelativePanel>
 
                 <RelativePanel x:Name="RecipeNotesPanel" Margin="20" RelativePanel.Below="RecipeIngredientsPanel">
-                    <TextBox x:Name="AddRecipeNoteTextBox" Header="Notes" PlaceholderText="Enter a note here" TabIndex="14" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                    <TextBox x:Name="AddRecipeNoteTextBox" Header="Notes" PlaceholderText="Enter a note here" TabIndex="14" Padding="0,0,0,16" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
 
                     <StackPanel x:Name="RecipeNotesButtonPanel" Orientation="Horizontal" RelativePanel.Below="AddRecipeNoteTextBox" RelativePanel.AlignRightWithPanel="True">
                         <AppBarButton x:Name="RecipeNoteAddButton" Style="{StaticResource AppBarButtonRevealStyle}" Icon="Add" Label="Add note" Click="RecipeNotesAddButton_Click" />
