Add NumberBox for AddRecipeIngredientQuantityNumberBox

--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -6,9 +6,10 @@
     xmlns:recipeBox="using:RecipeBox"
     xmlns:converters="using:RecipeBox.Converters"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     mc:Ignorable="d"
     DataContext="{x:Bind recipe}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -94,8 +95,8 @@
                 <RelativePanel x:Name="RecipeIngredientsPanel" Margin="20" RelativePanel.Below="RecipeDetailsPanel">
                     <TextBlock x:Name="RecipeIngredientsTitleTextBlock" Text="Ingredients" VerticalAlignment="Center" Style="{ThemeResource BaseTextBlockStyle}" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
                     <RelativePanel x:Name="RecipeIngredientPanel" RelativePanel.Below="RecipeIngredientsTitleTextBlock">
-                        <TextBox x:Name="AddRecipeIngredientQuantityTextBox" Header="Quantity" MaxLength="10" TabIndex="10" Padding="0,0,0,16" Width="65" HorizontalAlignment="Left" InputScope="NumberFullWidth" ui:TextBoxExtensions.Regex="^(?:[1-9]\d*(?:\.\d+)?|0\.0*[1-9]\d*)$" ui:TextBoxExtensions.ValidationMode="Forced" />
-                        <ComboBox x:Name="AddRecipeIngredientUnitOfMeasurementComboBox" Header="Unit of Measurement" TabIndex="11" Padding="0,0,0,20" Margin="10,0,0,0" Width="135" HorizontalAlignment="Left" RelativePanel.RightOf="AddRecipeIngredientQuantityTextBox" />
+                        <muxc:NumberBox x:Name="AddRecipeIngredientQuantityNumberBox" Header="Quantity" PlaceholderText="0.00" TabIndex="10" Padding="0,0,0,16" Width="65" HorizontalAlignment="Left" AcceptsExpression="False" />
+                        <ComboBox x:Name="AddRecipeIngredientUnitOfMeasurementComboBox" Header="Unit of Measurement" TabIndex="11" Padding="0,0,0,20" Margin="10,0,0,0" Width="135" HorizontalAlignment="Left" RelativePanel.RightOf="AddRecipeIngredientQuantityNumberBox" />
                         <TextBox x:Name="AddRecipeIngredientNameTextBox" Header="Name" TabIndex="12" Padding="0,0,0,16" Margin="10,0,0,0" Width="180" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" RelativePanel.RightOf="AddRecipeIngredientUnitOfMeasurementComboBox" />
                     </RelativePanel>
 
